--- a/Utils/LoaderNew/update.ini
+++ b/Utils/LoaderNew/update.ini
@@ -1,7 +1,7 @@
 [UPDATE]
 path_from=\\192.168.68.99\lis\
-path_to=%USERPROFILE%\Lis_Guru\
+path_to=%USERPROFILE%\Lis\
 file_exe=Lis.exe lis
 
 [IP]
-sql_ip=92.53.107.222
+sql_ip=10.244.252.10
